--- a/hw1/pom.xml
+++ b/hw1/pom.xml
@@ -93,8 +93,17 @@
 			        </dependency>
 			    </dependencies>
 			</plugin>
+			
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-checkstyle-plugin</artifactId>
+			  <configuration>
+			    <configLocation>google_checks.xml</configLocation>
+			  </configuration>
+			</plugin>
         </plugins>
     </build>
+    
     
    <reporting>
     <plugins>
